Update: (#910) Alert Notifications Fixed should be aligned top and span full width in smaller screens
Update: (#910) Alert added `.alert-notifications-static-sm-down` for alerts that push content down in small screens

New: (#910) Alert added options to configure `$alert-notifications-max-width-mobile`, `$alert-notifications-static-sm-down-box-shadow`, `$alert-notifications-static-sm-down-margin-bottom`, `$alert-notifications-static-sm-down-margin-left`, `$alert-notifications-static-sm-down-margin-right`, `$alert-notifications-static-sm-down-margin-top`

--- a/packages/clay-css/src/scss/variables/_alerts.scss
+++ b/packages/clay-css/src/scss/variables/_alerts.scss
@@ -62,13 +62,20 @@ $alert-notifications-fixed-left: 1.25rem !default; // 20px
 $alert-notifications-fixed-right: null !default;
 $alert-notifications-fixed-top: null !default;
 
-$alert-notifications-fixed-bottom-mobile: null !default;
-$alert-notifications-fixed-left-mobile: 0.5rem !default; // 8px
-$alert-notifications-fixed-right-mobile: 0.5rem !default; // 8px
-$alert-notifications-fixed-top-mobile: 4.25rem !default; // 68px
+$alert-notifications-fixed-bottom-mobile: auto !default;
+$alert-notifications-fixed-left-mobile: 1rem !default; // 16px
+$alert-notifications-fixed-right-mobile: 1rem !default; // 16px
+$alert-notifications-fixed-top-mobile: 1rem !default; // 16px
 
 $alert-notifications-box-shadow: null !default;
 $alert-notifications-max-width: 22.5rem !default; // 360px
+$alert-notifications-max-width-mobile: none !default;
+
+$alert-notifications-static-sm-down-box-shadow: null !default;
+$alert-notifications-static-sm-down-margin-bottom: 1rem !default;
+$alert-notifications-static-sm-down-margin-left: 1rem !default;
+$alert-notifications-static-sm-down-margin-right: 1rem !default;
+$alert-notifications-static-sm-down-margin-top: 1rem !default;
 
 // Alert Variants
 
